<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ContactsActivity">


    <RelativeLayout
        android:id="@+id/layout_contacts_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textview_contacts"
            android:layout_width="87dp"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/contacts"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/midnight_express"
            android:background="@drawable/bg"/>

        <ImageView
            android:id="@+id/imageview_add_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_import_add_members" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_middle_contacts"
        android:layout_width="335dp"
        android:layout_height="275dp"
        android:layout_below="@+id/layout_contacts_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:background="@drawable/rectangle_copy_5">

        <ImageView
            android:id="@+id/imageview_id_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_id_card" />

        <TextView
            android:id="@+id/textview_no_access"
            android:layout_width="193dp"
            android:layout_height="17dp"
            android:layout_below="@+id/imageview_id_card"
            android:layout_marginTop="15dp"
            android:text="@string/no_access"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/catalina_blue"/>

        <TextView
            android:id="@+id/textview_we_dont"
            android:layout_width="268dp"
            android:layout_height="54dp"
            android:layout_below="@+id/textview_no_access"
            android:layout_marginTop="10dp"
            android:text="@string/we_dont_access"
            android:textSize="14sp"
            android:textColor="@color/catalina_blue"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>